--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,408 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Permanent+Marker&display=swap");
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol,
+ul {
+	list-style: none;
+}
+blockquote,
+q {
+	quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	content: "";
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100%;
+	/* font-family: 'Titillium Web', sans-serif; */
+	font-family: "Open Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	/* font-family: 'Bangers', cursive; */
+	font-family: "Permanent Marker", cursive;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+#wrapper {
+	width: 1024px;
+	margin: 0 auto;
+}
+
+header {
+	
+	
+	padding: 10px 20px 0px 20px;
+	text-align: center;
+	
+	padding-top: 60px;
+}
+
+header nav {
+	display: flex;
+	display: ;
+	top: 0;
+	left: 0;
+	
+	z-index: 1;
+	border-bottom: 1px solid #ccc;
+	transition-property: padding;
+	transition-duration: 0.5s;
+	padding: 0px 0;
+}
+
+nav:hover {
+	transition-property: padding;
+	transition-duration: 0.5s;
+	padding: 10px 0;
+}
+
+header nav a {
+	color: #888;
+	text-decoration: none;
+	font-weight: 400;
+	padding: 30px;
+}
+
+nav a:hover {
+	transition-property: color, font-weight;
+	transition-duration: 0.5s, 0.5s;
+	color: #fff;
+	font-weight: bold;
+}
+
+.logo {
+	background: url("https://i.imgur.com/RoKbjZH.png");
+	width: 183px;
+	height: 36px;
+	margin-left: 100px;
+	
+}
+
+header .iov {
+	display: inline-block;
+	font-size: 75px;
+	text-align: center;
+	vertical-align: middle;
+	margin-top: 50px;
+	margin-right: 60px;
+}
+
+.header-image {
+	display: inline-block;
+	background: url("https://i.imgur.com/Hw8avII.png");
+	vertical-align: middle;
+	width: 379px;
+	height: 379px;
+	margin-left: 60px;
+	margin-top: 50px;
+}
+
+.button {
+	display: block;
+	width: 180px;
+	height: 30px;
+	font-size: 20px;
+	border: 1px solid black;
+	padding: 5px 20px;
+	margin: 0 auto;
+	margin-top: 30px;
+}
+
+.button:hover {
+	cursor: pointer;
+}
+
+.top-section {
+	padding: 40px 0;
+	font-size: 18px;
+	display: flex;
+}
+
+.top-section div {
+	display: inline-block;
+	width: 500px;
+	margin: 0 auto;
+	margin-right: 10px;
+}
+
+.top-section div:last-child {
+	margin-right: 0;
+}
+
+.middle-section img {
+	width: 100%;
+}
+
+.middle-img {
+	background: url("https://i.imgur.com/FGkeFT2.jpg");
+	height: 182px;
+	width: 100%;
+}
+
+.bottom-section {
+	display: flex;
+	padding: 40px 0;
+	font-size: 18px;
+	border-bottom: 1px solid black;
+}
+
+.bottom-section div {
+]
+	width: 330px;
+	margin: 0 auto;
+	margin-right: 10px;
+}
+
+.bottom-section div:last-child {
+	margin-right: 0;
+}
+
+.contact {
+	padding: 40px 0;
+}
+
+footer {
+	padding: 40px 0;
+	height: 150px;
+}
+
+footer h6 {
+	text-align: center;
+}
+
+   .body { 
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+   }
+.body-div {
+	width: 40%;
+  border: 1px solid black;
+  padding: 30px;
+  margin: 20px;
+  background-color: rgb(240, 236, 239);
+	
+	
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 
 
+	height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+.button2 {
+	display: block;
+	width: 140px;
+	height: 30px;
+	font-size: 20px;
+	border: 1px solid black;
+	padding: 5px 20px;
+	margin: 0 auto;
+	margin-top: 30px;
+	background-color: white;
+	
+
+}
+
+.servicediv {
+	width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding-bottom: 30px;
+  margin: 20px;
+ 
+	
+	
+	font-size: 100%;
+	font: inherit;
+	
+
+
+	height: 100%;
+	font-family: 'Titillium Web', sans-serif;
+	border-bottom: 1px solid #000;
+	
+}
+
+ .closing { 
+	border-top: 2px solid black;
+	align-content: flex-end;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.finish {
+width: 40%;
+margin:5%;
+	  
+	  
+
+}
+
+ul{
+	list-style-type: square;
+	margin-top: 5%;
+	margin-left: 5%;
+}
+
+
+
+
+/* MEDIA QUERIES  */
+
+@media screen and (max-width: 800px) {
+
+    .header-image {
+        display: none;
+
+    }
+
+    #wrapper {
+        width: 800px;
+        margin: 0 auto;
+	}
+	
+	header nav {
+	    justify-content: center;
+	
+	}
+
+	.logo {
+		background: url("https://i.imgur.com/RoKbjZH.png");
+		
+		
+		
+	}
+
+
+	
+}
