--- a/css/index.css
+++ b/css/index.css
@@ -1,86 +1,18 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Permanent+Marker&display=swap");
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -89,35 +21,22 @@ video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
 	line-height: 1;
 }
-ol,
-ul {
+ol, ul {
 	list-style: none;
 }
-blockquote,
-q {
+blockquote, q {
 	quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-	content: "";
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
 	content: none;
 }
 table {
@@ -125,284 +44,321 @@ table {
 	border-spacing: 0;
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-	box-sizing: border-box;
-}
-
-html,
-body {
-	height: 100%;
-	/* font-family: 'Titillium Web', sans-serif; */
-	font-family: "Open Sans", sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-	/* font-family: 'Bangers', cursive; */
-	font-family: "Permanent Marker", cursive;
-	letter-spacing: 1px;
-	margin-bottom: 15px;
-}
-
-/* Your code starts here! */
-#wrapper {
-	width: 1024px;
-	margin: 0 auto;
-}
-
-header {
-	
-	
-	padding: 10px 20px 0px 20px;
-	text-align: center;
-	
-	padding-top: 60px;
-}
-
-header nav {
-	display: flex;
-	display: ;
-	top: 0;
-	left: 0;
-	
-	z-index: 1;
-	border-bottom: 1px solid #ccc;
-	transition-property: padding;
-	transition-duration: 0.5s;
-	padding: 0px 0;
-}
-
-nav:hover {
-	transition-property: padding;
-	transition-duration: 0.5s;
-	padding: 10px 0;
-}
-
-header nav a {
-	color: #888;
-	text-decoration: none;
-	font-weight: 400;
-	padding: 30px;
-}
-
-nav a:hover {
-	transition-property: color, font-weight;
-	transition-duration: 0.5s, 0.5s;
-	color: #fff;
-	font-weight: bold;
-}
-
-.logo {
-	background: url("https://i.imgur.com/RoKbjZH.png");
-	width: 183px;
-	height: 36px;
-	margin-left: 100px;
-	
-}
-
-header .iov {
-	display: inline-block;
-	font-size: 75px;
-	text-align: center;
-	vertical-align: middle;
-	margin-top: 50px;
-	margin-right: 60px;
-}
-
-.header-image {
-	display: inline-block;
-	background: url("https://i.imgur.com/Hw8avII.png");
-	vertical-align: middle;
-	width: 379px;
-	height: 379px;
-	margin-left: 60px;
-	margin-top: 50px;
-}
-
-.button {
-	display: block;
-	width: 180px;
-	height: 30px;
-	font-size: 20px;
-	border: 1px solid black;
-	padding: 5px 20px;
-	margin: 0 auto;
-	margin-top: 30px;
-}
-
-.button:hover {
-	cursor: pointer;
-}
-
-.top-section {
-	padding: 40px 0;
-	font-size: 18px;
-	display: flex;
-}
-
-.top-section div {
-	display: inline-block;
-	width: 500px;
-	margin: 0 auto;
-	margin-right: 10px;
-}
-
-.top-section div:last-child {
-	margin-right: 0;
-}
-
-.middle-section img {
-	width: 100%;
-}
-
-.middle-img {
-	background: url("https://i.imgur.com/FGkeFT2.jpg");
-	height: 182px;
-	width: 100%;
-}
-
-.bottom-section {
-	display: flex;
-	padding: 40px 0;
-	font-size: 18px;
-	border-bottom: 1px solid black;
-}
-
-.bottom-section div {
-]
-	width: 330px;
-	margin: 0 auto;
-	margin-right: 10px;
-}
-
-.bottom-section div:last-child {
-	margin-right: 0;
-}
-
-.contact {
-	padding: 40px 0;
-}
-
-footer {
-	padding: 40px 0;
-	height: 150px;
-}
-
-footer h6 {
-	text-align: center;
-}
-
-   .body { 
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-   }
-.body-div {
-	width: 40%;
-  border: 1px solid black;
-  padding: 30px;
-  margin: 20px;
-  background-color: rgb(240, 236, 239);
-	
-	
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
 
 
-	height: 100%;
+
+html, body {
+    height: 100%;
     font-family: 'Titillium Web', sans-serif;
 }
 
-.button2 {
-	display: block;
-	width: 140px;
-	height: 30px;
-	font-size: 20px;
-	border: 1px solid black;
-	padding: 5px 20px;
-	margin: 0 auto;
-	margin-top: 30px;
-	background-color: white;
-	
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+.content {
+    max-width: 880px;
+	margin: auto;
+	justify-content: center;
 
 }
 
-.servicediv {
-	width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  padding-bottom: 30px;
-  margin: 20px;
- 
-	
-	
-	font-size: 100%;
-	font: inherit;
-	
-
-
-	height: 100%;
-	font-family: 'Titillium Web', sans-serif;
-	border-bottom: 1px solid #000;
-	
-}
-
- .closing { 
-	border-top: 2px solid black;
-	align-content: flex-end;
+#navbar {
 	display: flex;
-	flex-wrap: wrap;
+	height: 65px;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.finish {
-width: 40%;
-margin:5%;
-	  
-	  
-
+.navLinks {
+    display: flex;
+    flex-flow: row nowrap;
 }
 
-ul{
-	list-style-type: square;
-	margin-top: 5%;
-	margin-left: 5%;
+.navLink {
+	color: lightslategrey;
+	font-size: 14px;
+    text-decoration: none;
+    margin-right: 60px;
 }
 
+#bannerSection {
+	height: 480px;
+	border-bottom: 1px solid black;
+	margin: 0px 0px 30px 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#taglineBox {
+	display: flex;
+	flex-flow: column wrap;
+	text-align: center;
+    justify-content: center;
+    align-items: center;
+	width: 500px;
+	height: 480px;
+}
+
+#tagline {
+	font-size: 60px;
+}
+
+#getStarted {
+	height: 20px;
+	width: 150px;
+	color:black;
+	font-size: 14px;
+	border: 1px solid black;
+	padding: 2px;
+	text-decoration: none;
+	background-color: grey;
+}
+
+#upperSection {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	margin: 0px 0px 30px 0px;
+}
+
+#features {
+	width: 440px;
+}
+
+#about {
+	width: 440px;
+}
+
+#lowerSection {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	margin: 30px 0px 30px 0px;
+}
+
+#services {
+	width: 290px;
+}
+
+#product {
+	width: 290px;
+}
+
+#vision {
+	width: 290px;
+}
+
+#address {
+	border-top: 1px solid black;
+	width: 880px;
+	padding: 40px 0px 0px 0px;
+}
+
+#footer {
+	text-align: center;
+	margin: 28px 0px;
+	font-size: 14px;
+}
+
+/* media queries CSS */
+
+@media (max-width: 800px) {
 
 
-
-/* MEDIA QUERIES  */
-
-@media screen and (max-width: 800px) {
-
-    .header-image {
-        display: none;
-
+    #navbar {
+        flex-flow: column-reverse nowrap;
     }
 
-    #wrapper {
-        width: 800px;
-        margin: 0 auto;
-	}
-	
-	header nav {
-	    justify-content: center;
-	
-	}
+    .logo {
+        margin-top: 50px;
+    }
 
-	.logo {
-		background: url("https://i.imgur.com/RoKbjZH.png");
-		
-		
-		
-	}
+    .navLinks {
+        display: flex;
+        justify-content: space-between;
+    }
 
+    .navLink {
+        margin: 45px 42px;
+        font-size: 16px;
+    }
 
-	
+    #headerImage {
+        display: none;
+    }
+
+    #bannerSection {
+        justify-content: center;
+        padding-top: 75px;
+        border-bottom: 0px;
+        height: 450px;
+    }
+
+    #tagline {
+        font-size: 72px;
+    }
+
+    #getStarted {
+        height: 35px;
+        width: 170px;
+        color: black;
+        font-size: 16px;
+        border: 1px solid black;
+        padding-top: 7px;
+		text-decoration: none;
+		background-color: grey;
+    }
+
+    #upperSection {
+    	justify-content: space-between;
+        width: 755px;
+        border-top: 2px solid black;
+        margin: 0px 0px 40px 20px;
+        padding: 30px 0px 0px 10px;
+    }
+
+    #features {
+        width: 360px;
+    }
+
+    #about {
+        width: 360px;
+    }
+
+    .middle-img {
+        width: 755px;
+        margin-left: 20px;
+    }
+
+    #lowerSection {
+        justify-content: space-between;
+        width: 755px;
+        margin: 0px 0px 60px 20px;
+        padding: 30px 0px 0px 10px;
+    }
+
+    #services {
+        width: 210px;
+    }
+
+    #product {
+        width: 210px;
+    }
+
+    #vision {
+        width: 210px;
+    }
+
+    #address {
+        border-top: 2px solid black;
+        margin-left: 20px;
+        width: 755px;
+        padding: 30px 0px 0px 5px;
+    }
+
+    #footer {
+        text-align: center;
+        margin-top: 70px;
+        font-size: 16px;
+    }
+
 }
+
+@media (max-width: 500px) {
+
+
+    #navbar {
+        height: 400px;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .logo {
+        margin: 15px 0px;
+    }
+    .navLinks {
+        flex-flow: column nowrap;
+    }
+
+    .navLink {
+        font-size: 20px;
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 22px 0px;
+        width: 500px;
+        border-top: 1px solid black;
+    }
+
+    #bannerSection {
+        border-bottom: 0px;
+        height: 350px;
+        padding-top: 0px;
+    }
+
+    #tagline {
+        border-top: 1px solid black;
+        width: 500px;
+        margin-top: 25px;
+        padding-top: 40px;
+    }
+
+    #upperSection {
+        width: 460px;
+        flex-flow: column wrap;
+        margin-right: 40px;
+        padding-left: 0px;
+        align-items: flex-start;
+    }
+
+    #features {
+        width: 460px;
+        margin: 25px 0px;
+    }
+
+    #about {
+        width: 460px;
+        margin: 25px 0px;
+    }
+
+    .middle-img {
+        width: 460px;
+    }
+
+    #lowerSection {
+        width: 460px;
+        flex-flow: column wrap;
+        margin-right: 40px;
+        padding-left: 0px;
+        align-items: flex-start;
+        margin-bottom: 20px;
+    }
+
+    #services {
+        width: 460px;
+        margin: 25px 0px;
+    }
+
+    #product {
+        width: 460px;
+        margin: 25px 0px;
+    }
+
+    #vision {
+        width: 460px;
+        margin: 25px 0px;
+    }
+
+    #address {
+        width: 460px;
+        margin-right: 40px;
+    }
+    #footer {
+        text-align: center;
+        margin-top: 50px;
